# winterbees

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  README.md  WORKSPACE  foobar.feature
.github/workflows/: docker.yml  jekyll-gh-pages.yml  main.yml  rust.yml
algebra/src/: lib.rs
api/: Cargo.toml
api/src/: main.rs
build_tools/kubernetes/: setup.bzl
build_tools/python/: custom_container.bzl  drte.bzl  py.bzl
deployment/: BUILD.bazel
deployment/kubernetes/: BUILD.bazel  namespace-staging.yaml
deployment/registry/: BUILD.bazel  private-registry.yaml
deployment/services/hello_world/: BUILD.bazel  deployment.yaml
docs/: Gemfile  _config.yml  architecture.markdown
docs/_posts/: 2024-01-16-welcome-to-jekyll.markdown  2024-08-13-welcome-to-jekyll.markdown
resources/features/: my-first-feature.feature
search-engine/: Cargo.toml
services/hello_world/: BUILD.bazel  hello_world.py
services/hello_world/test/: test_foo.py
