load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "service_deployment",
    objects = [
        "//deployment/services/hello_world:hello_world_service"
    ],
)

k8s_objects(
    name = "winterbees-staging",
    objects = [
        "//deployment/kubernetes:ns-staging",
        ":service_deployment",
    ],
)
