[package]
name = "search-engine"
version = "0.1.0"
resolver = "2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"

rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
serde = "1.0"
