load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_deploy(
    name = "private-registry-pod",
    template = "private-registry.yaml",
    visibility = ["//visibility:public"],
)

k8s_deploy(
    name = "private-registry-svc",
    template = "private-registry-svc.yaml",
    visibility = ["//visibility:public"],
)

k8s_objects(
    name = "private-registry",
    objects = [
        ":private-registry-pod",
        ":private-registry-svc",
    ],
)
