load("//build_tools/python:py.bzl", "py_library", "py_pytest")
load(
    "@dbx_build_tools//build_tools/py:py.bzl",
    "dbx_py_binary",
    "dbx_py_pytest_test",
)
load("//build_tools/python:custom_container.bzl", "dbx_image")

py_library(
    name = "hello_world_app",
    srcs = ["hello_world.py"],
    python2_compatible = False,
    pythonpath = "services",
    visibility = ["//visibility:public"],
)

py_pytest(
    name = "test_foo",
    srcs = ["test/test_foo.py"],
    python2_compatible = False,
    deps = [":hello_world_app"],
)

dbx_image(
    name = "hello_world_image",
    main = "hello_world.py",
    scrs = ["hello_world.py"],
    visibility = ["//visibility:public"],
    base = "//:base_python",
)
