load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

k8s_deploy(
    name = "hello_world_service",
    images = {
        # Simulate a typo
        "vermell/winterbees:latest": "//services/hello_world:hello_world_image",
    },
    template = "deployment.yaml",
    visibility = ["//visibility:public"],
)
